# rust_project

./: Cargo.toml  README.md  lib.rs  main  main.rs  run_project.sh
channel/: channel.rs
crust_of_rust/: README.md
crust_of_rust/03_iterator/src/: lib.rs
crust_of_rust/04_pointers/src/: rc.rs  refcell.rs
crust_of_rust/06_sorting/: Cargo.toml
crust_of_rust/06_sorting/src/: lib.rs  selectionsort.rs
crust_of_rust/07_subtyping_and_variance/: Cargo.toml
crust_of_rust/07_subtyping_and_variance/src/: lib.rs
crust_of_rust/08_drop_check/src/: lib.rs
crust_of_rust/09_atomics_memory_ordering/: Cargo.toml  README.md
crust_of_rust/09_atomics_memory_ordering/src/: lib.rs
crust_of_rust/10_dispatch_fat_pointers/: Cargo.toml
crust_of_rust/10_dispatch_fat_pointers/src/: lib.rs
crust_of_rust/11_async_await/: Cargo.toml  README.md
crust_of_rust/12_functions_closures_traits/: Cargo.toml
crust_of_rust/13_send_sync/: Cargo.toml
crust_of_rust/13_send_sync/src/: lib.rs
crust_of_rust/14_ffi/: Cargo.toml  build.rs
crust_of_rust/14_ffi/src/: main.rs
crust_of_rust/14_libsodium/: Cargo.toml  build.rs
declarative_macros/: decl.rs  mod.rs
iterator/: flatten_iterator.rs  mod.rs
lifetimes/: strsplit.rs
linked_list/: mod.rs
pointers/: cell.rs
sorting/: bubblesort.rs  insertionsort.rs  quicksort.rs
sorting/benches/: main.rs
src/: lib.rs
src/linked_list/: linked_list.rs  linked_list_into_iter.rs  linked_list_iter.rs  linked_list_mut_iter.rs  linked_list_node.rs  mod.rs
src/vec/: mod.rs
strtok/: mod.rs
vec/: mod.rs
(+1 files in other folders)
