[package]
name = "rust_project"
version = "0.1.0"
edition = "2021"
default-run = "main"

[dependencies]
rand = "0.9.2"
boks = {path = "./boks"}

[[bin]]
name = "main"
path = "main.rs"

[[bin]]
name = "sorting-bench"
path = "sorting/benches/main.rs"

[[bin]]
name = "boks"
path = "src/bin/boks.rs"

[lib]
path = "lib.rs"

