[package]
name = "rust_project"
version = "0.1.0"
edition = "2021"
default-run = "main"

[workspace]
members = [
  "crust_of_rust/01_lifetime",
  "crust_of_rust/02_declarative_macros",
  "crust_of_rust/03_iterator",
  "crust_of_rust/04_pointers",
  "crust_of_rust/05_channel",
  "crust_of_rust/06_sorting",
  "crust_of_rust/07_subtyping_and_variance",
  "crust_of_rust/08_drop_check",
  "crust_of_rust/09_atomics_memory_ordering",
  "crust_of_rust/10_dispatch_fat_pointers",
  "crust_of_rust/11_async_await",
  "crust_of_rust/12_functions_closures_traits",
]

[dependencies]
lifetime = {path = "./crust_of_rust/01_lifetime"}
declarative_macros = {path = "./crust_of_rust/02_declarative_macros"}
iterator = {path = "./crust_of_rust/03_iterator"}
pointers = {path = "./crust_of_rust/04_pointers"}
channel = {path = "./crust_of_rust/05_channel"}
sorting = {path = "./crust_of_rust/06_sorting"}
# boks = {path = "./crust_of_rust/07_subtyping_and_variance"}
strtok = {path = "./crust_of_rust/08_drop_check"}

[lib]
path = "./src/lib.rs"
